<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/app_background"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btnBack"
            android:padding="10dp">

    <LinearLayout
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="@color/purple_500"
            android:layout_height="wrap_content" tools:ignore="RtlSymmetry">

        <!-- Equalizer Section -->
        <TextView
                android:text="@string/equalizer"
                android:textStyle="bold"
                android:background="@color/red"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <!-- 15 Bands (Repeat SeekBars with different frequencies) -->
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="200sp">

            <!-- Equalizer Band 1 (30-120 Hz) -->
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <SeekBar
                        android:id="@+id/equalizer_band_1"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:rotation="270"/>
                <TextView
                        android:text="@string/_120_hz"
                        android:textSize="10sp"
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" tools:ignore="SmallSp"/>
            </LinearLayout>

            <!-- Equalizer Band 2 (120-460 Hz) -->
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <SeekBar
                        android:id="@+id/equalizer_band_2"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:max="1000"
                        android:rotation="270" />
                <TextView
                        android:text="460 hz"
                        android:textSize="10sp"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" tools:ignore="SmallSp"/>
            </LinearLayout>

            <!-- Equalizer Band 3 (250 Hz) -->
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <SeekBar
                        android:id="@+id/equalizer_band_3"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:max="1000"
                        android:rotation="270" />
                <TextView
                        android:text="1.8 khz"
                        android:textSize="10sp"
                        android:layout_marginStart="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" tools:ignore="SmallSp"/>
            </LinearLayout>

            <!-- Equalizer Band 4 (500 Hz) -->
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <SeekBar
                        android:id="@+id/equalizer_band_4"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:max="1000"
                        android:rotation="270" />
                <TextView
                        android:text="4.5 khz"
                        android:textSize="10sp"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" tools:ignore="SmallSp"/>
            </LinearLayout>

            <!-- Equalizer Band 5 (1 kHz) -->
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <SeekBar
                        android:id="@+id/equalizer_band_5"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:max="1000"
                        android:rotation="270" />
                <TextView
                        android:text="@string/_8_khz"
                        android:textSize="10sp"
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" tools:ignore="SmallSp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="match_parent">
            <!-- Bass Boost Section -->
            <TextView
                    android:text="@string/bass_boost"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginEnd="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <SeekBar
                    android:id="@+id/bass_boost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="1000" />
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent">
            <!-- Virtualizer Section -->
            <TextView
                    android:text="@string/virtualizer"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginEnd="15dp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <SeekBar
                    android:id="@+id/virtualizer"
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="1000"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
